# early-stopping-pytorch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MNIST_Early_Stopping_example.ipynb  README.md  checkpoint.pt  pyproject.toml  pytorchtools.py  requirements-dev.txt  requirements.txt  setup_dev_env.sh
.github/workflows/: pr-title-lint.yml  publish.yml  release.yml  tests.yml
early_stopping_pytorch/: __init__.py  early_stopping.py
tests/: test_early_stopping.py
