[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "early-stopping-pytorch"
version = "1.0.5"
description = "A PyTorch utility package for Early Stopping"
readme = "README.md"
authors = [
    { name = "Bjarte Sunde", email = "BjarteSunde@outlook.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21",
    "torch>=1.9.0"
]

[tool.semantic_release]
version_variable = "early_stopping_pytorch/__init__.py:__version__"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
build_command = "pip install build && python -m build"