[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "early-stopping-pytorch"
version = "1.0.7"
description = "A PyTorch utility package for Early Stopping"
readme = "README.md"
authors = [
    { name = "Bjarte Sunde", email = "BjarteSunde@outlook.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21",
    "torch>=1.9.0"
]

[project.urls]
Repository = "https://github.com/Bjarten/early-stopping-pytorch"

[tool.semantic_release]
version_variables = [
    "early_stopping_pytorch/__init__.py:__version__",
    "README.md:version_note"
]
version_pattern = '''
    (?P<variable>__version__\s*=\s*['"](?P<version>[^'"]+)['"]) |
    (?P<variable>note\s*=\s*\{Version\s(?P<version>[^}]+)\})
'''
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
build_command = "pip install build && python -m build"